--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.1.0",
     "@mui/material": "^5.1.0",
-    "babel-loader": "^8.2.3",
-    "gatsby": "^4.9.3",
+    "gatsby": "^4.25.3",
     "gatsby-plugin-advanced-sitemap": "^2.0.0",
     "gatsby-plugin-google-analytics": "^4.9.0",
     "gatsby-plugin-gtag": "^1.0.13",
@@ -18,7 +17,7 @@
     "gatsby-plugin-manifest": "^4.9.1",
     "gatsby-plugin-offline": "^5.9.1",
     "gatsby-plugin-react-helmet": "^5.9.0",
-    "gatsby-plugin-robots-txt": "^1.7.0",
+    "gatsby-plugin-robots-txt": "1.4",
     "gatsby-plugin-sass": "^5.9.0",
     "gatsby-plugin-sharp": "^4.9.1",
     "gatsby-remark-autolink-headers": "^5.9.0",
@@ -33,8 +32,8 @@
     "gatsby-transformer-remark": "^5.9.1",
     "gatsby-transformer-sharp": "^4.9.0",
     "prismjs": "^1.24.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
     "react-rotating-text": "^1.4.1",
     "sass": "^1.43.4",
